JumpScript/tests/baselines/reference/parserStrictMode6-negative.errors.txt
tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode6-negative.jump(1,1): error TS2539: Cannot assign to 'eval' because it is not a variable.


==== tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode6-negative.jump (1 errors) ====
    eval++;
    ~~~~
!!! error TS2539: Cannot assign to 'eval' because it is not a variable.